ci-cd update 8